# webinar-processor

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  poster.sh  process_webinar.sh  pyproject.toml  requirements.txt  setup.py
.opencode/: ruff-baseline.json
.opencode/skills/python-ruff-guard/: SKILL.md
.opencode/skills/python-ruff-guard/scripts/: ruff_guard.sh  ruff_score.py
conf/: diarization.yaml  final-topics-prompt-onepass.txt  intermediate-topics-prompt.txt  long-story-chunked.txt  long-story.txt  long-summary.txt  quiz-prompt.txt  short-summary-with-context.txt  short-summary.txt
docs/: pipeline.puml
models/: females.gmm  males.gmm
src/webinar_processor/: __init__.py
src/webinar_processor/commands/: __init__.py  base_command.py  cmd_quiz.py  cmd_raw_text.py  cmd_speaker_analyze.py  cmd_speaker_apply.py  cmd_speaker_identify.py  cmd_speaker_label.py  cmd_speakers.py  cmd_storytell.py  cmd_summarize.py  cmd_summarize_with_context.py  cmd_text_transform.py  cmd_topics.py  cmd_transcribe.py  cmd_transcript_fix.py  cmd_transcript_verify.py  cmd_tsv_to_transcript.py  cmd_upload_quiz.py  cmd_upload_webinar.py  cmd_yt_download.py  download.py  identify_speakers.py  poster.py  upload_webinar.py
src/webinar_processor/commands/speakers/: __init__.py  analyze.py  apply.py  crud.py  identify.py  label.py  relabel.py
src/webinar_processor/llm/: __init__.py  client.py  config.py  constants.py  exceptions.py
src/webinar_processor/resources/conf/: long-story-chunked.txt  short-summary-with-context.txt  short-summary.txt  storytell-appendix-task.txt  storytell-condense-prompt.txt  storytell-from-notes-prompt.txt  storytell-outline-prompt.txt  storytell-prompt.txt  storytell-quiz-prompt.txt  storytell-section-task.txt  storytell-summary-prompt.txt  text-prompt.txt  transcript-fix-reconstruct-prompt.txt  transcript-verify-judge-prompt.txt
src/webinar_processor/services/: __init__.py  gender_detection_service.py  llm_service.py  retranscription_service.py  speaker_database.py  speaker_name_extractor.py  storytell_service.py  topic_extraction_service.py  transcript_fixer_service.py  transcript_service.py  transcript_verifier_service.py  transcription_service.py  voice_embedding_service.py
src/webinar_processor/utils/: __init__.py  embedding_codec.py  ffmpeg.py  gemini.py  gender_detection.py  io.py  names.py  openai.py  package.py  path.py  token.py  transcript_formatter.py
tests/: README.md  conftest.py  test_llm.py  test_llm_service.py  test_speaker_database.py  test_split_text.py  test_transcript_fixer_service.py  test_transcript_verifier_service.py  test_voice_embedding_service.py
tests/commands/: test_download.py  test_speakers.py  test_topics.py  test_transcript_fix.py  test_transcript_verify.py
tests/integration/: test_workflow.py
tests/services/: test_topic_extraction_service.py
tests/utils/: test_package.py  test_path.py
webinar_processor/: __init__.py
webinar_processor/commands/: __init__.py  cmd_quiz.py  cmd_summarize_with_context.py  cmd_text_transform.py  cmd_topics.py  create_summary.py  detect_gender.py  download.py  post_process_transcript.py  summarize.py  transcribe.py  upload_webinar.py
webinar_processor/gender_detection/: identify_gender.py  voice_features.py
webinar_processor/utils/: config.py  ffmpeg.py  openai.py  package.py  path.py  segment.py
